# hwinfo

./: .gitignore  CMakeLists.txt  README.md  code_style_check.sh
.github/workflows/: build-linux-clang.yml  build-linux-gcc-arm.yml  build-linux-gcc.yml  build-macos.yml  build-windows-vs.yml  format-check.yml
examples/: CMakeLists.txt  system_infoMain.cpp
include/hwinfo/: battery.h  cpu.h  disk.h  gpu.h  hwinfo.h  mainboard.h  monitor.h  network.h  os.h  ram.h
include/hwinfo/utils/: PCIMapper.h  constants.h  filesystem.h  utils.h  wmi_wrapper.h
scripts/: feature-tests.shell
src/: CMakeLists.txt  PCIMapper.cpp  cpu.cpp  disk.cpp  gpu.cpp  hwinfo.cpp  mainboard.cpp  monitor.cpp  network.cpp  ram.cpp
src/apple/: battery.cpp  cpu.cpp  disk.cpp  mainboard.cpp  monitor.cpp  network.cpp  os.cpp  ram.cpp
src/linux/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  monitor.cpp  network.cpp  os.cpp  ram.cpp
src/linux/utils/: filesystem.cpp
src/opencl/: device.cpp
src/windows/: battery.cpp  cpu.cpp  disk.cpp  gpu.cpp  mainboard.cpp  monitor.cpp  network.cpp  os.cpp  ram.cpp
src/windows/utils/: wmi_wrapper.cpp
